исправлены замечания